@@ -21,6 +21,9 @@
 - libsyn123:
 -- Introduced SYN123_PORTABLE_API for an API without off_t and ssize_t
    (see NEWS.libsyn123).
+-- Fix reconfiguration of resampler to avoid double free when reducing
+   decimator stages to zero (bug 350). Thanks to Youngseok Choi for reporting
+   this fuzzed issue.
 
 1.31.2
 ------
